Harden Bitcoin trader command execution and remove credential remnants